--- a/package.json
+++ b/package.json
@@ -27,10 +27,16 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "5.19.1",
     "@supabase/supabase-js": "2.45.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "helmet": "^8.1.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "5.19.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
